# internal/server/route/route.go
@@ -1,6 +1,7 @@
 package route
 
 import (
+	"api-buddy/presentation/auth"
 	"api-buddy/presentation/health_handler"
 	"api-buddy/presentation/settings"
 
@@ -15,6 +16,9 @@ func InitRoute(api *gin.Engine) {
 	v1 := api.Group("/v1")
 	// ヘルスチェック
 	v1.GET("/health", health_handler.HealthCheck)
+
+	// ログイン
+	v1.POST("/auth/signin", auth.SignIn)
 
 	// Swagger
 	api.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
